; ModuleID = '/home/carl/AnghaBench/sway/sway/config/extr_output.c_output_get_identifier.c'
source_filename = "/home/carl/AnghaBench/sway/sway/config/extr_output.c_output_get_identifier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_output = type { %struct.wlr_output* }
%struct.wlr_output = type { i8*, i8*, i8* }

@.str = private unnamed_addr constant [9 x i8] c"%s %s %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @output_get_identifier(i8* %0, i64 %1, %struct.sway_output* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.sway_output*, align 8
  %7 = alloca %struct.wlr_output*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store %struct.sway_output* %2, %struct.sway_output** %6, align 8
  %8 = load %struct.sway_output*, %struct.sway_output** %6, align 8
  %9 = getelementptr inbounds %struct.sway_output, %struct.sway_output* %8, i32 0, i32 0
  %10 = load %struct.wlr_output*, %struct.wlr_output** %9, align 8
  store %struct.wlr_output* %10, %struct.wlr_output** %7, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = load i64, i64* %5, align 8
  %13 = load %struct.wlr_output*, %struct.wlr_output** %7, align 8
  %14 = getelementptr inbounds %struct.wlr_output, %struct.wlr_output* %13, i32 0, i32 0
  %15 = load i8*, i8** %14, align 8
  %16 = load %struct.wlr_output*, %struct.wlr_output** %7, align 8
  %17 = getelementptr inbounds %struct.wlr_output, %struct.wlr_output* %16, i32 0, i32 1
  %18 = load i8*, i8** %17, align 8
  %19 = load %struct.wlr_output*, %struct.wlr_output** %7, align 8
  %20 = getelementptr inbounds %struct.wlr_output, %struct.wlr_output* %19, i32 0, i32 2
  %21 = load i8*, i8** %20, align 8
  %22 = call i32 @snprintf(i8* %11, i64 %12, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %15, i8* %18, i8* %21)
  ret void
}

declare dso_local i32 @snprintf(i8*, i64, i8*, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
